syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "common/source.proto";
import "common/external_system.proto";
import "common/billing_cycle.proto";

option go_package = "api/grpc/v1/contract;contract_grpc_service";

message RolloutRenewalOpportunityOnExpirationGrpcRequest {
  string id = 1;
  string tenant = 2;
  string loggedInUserId = 3;
  string appSource = 4;
}

message RefreshContractStatusGrpcRequest {
  string id = 1;
  string tenant = 2;
  string loggedInUserId = 3;
  string appSource = 4;
}

message RefreshContractLtvGrpcRequest {
  string id = 1;
  string tenant = 2;
  string loggedInUserId = 3;
  string appSource = 4;
}

// Permanently delete contract request
message SoftDeleteContractGrpcRequest {
  string id = 1;
  string tenant = 2;
  string loggedInUserId = 3;
  string appSource = 4;
}

// Contract response message
message ContractIdGrpcResponse {
  string id = 1;
}

// Service definition
service ContractGrpcService {
  rpc RolloutRenewalOpportunityOnExpiration(RolloutRenewalOpportunityOnExpirationGrpcRequest) returns (ContractIdGrpcResponse);
  rpc RefreshContractStatus(RefreshContractStatusGrpcRequest) returns (ContractIdGrpcResponse);
  rpc RefreshContractLtv(RefreshContractLtvGrpcRequest) returns (ContractIdGrpcResponse);
  rpc SoftDeleteContract(SoftDeleteContractGrpcRequest) returns (google.protobuf.Empty);
}